--- a/src/Pages/Desserts.css
+++ b/src/Pages/Desserts.css
@@ -1,3 +1,8 @@
-h1 {
-    margin: 0;
+.Desserts_items{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    
+    
+    
 }
